# ev-station-solver

./: .gitignore  Home.py  LICENSE  README.md  compairsion_t.py  comparison_t_samples.csv  comparison_t_samples_540_vehicles.csv  comparison_t_samples_exact.csv  kit_tests.py  main.py  main_discrete.py  main_linear.py  problem.lp  problem_medium.lp  pyproject.toml  requirements.txt  summary_exact_results.xlsx  test.ipynb  test.py  visualisation_initial_locations.ipynb
locations/: medium_vehicle_locations.csv
pages/: 02_Optimiser.py  03_Paper.py
src/ev_station_solver/: constants.py  discrete_model.lp  errors.py  helper_functions.py  linear_model.lp  loading.py  location_improvement.py  logging.py  mopta_solver.py  plotting_help.py  stochastic_functions.py  streamlit.py
src/ev_station_solver/solving/: initial_location_generator.py  linear_solver.py  sample.py  solution.py  solver.py  solver_abstract.py  solver_discrete.py  solver_linear.py  validator.py
