[project]
name = "ev-station-solver"
version = "1.0.0"
description = "The solver to the paper 'Optimal placement of electric vehicle slow-charging stations: A continuous facility location problem under uncertainty' by H.W. Ljósheim, S. Jenkins, K.D. Searle, J.K. Wolff"
authors = [
    { name = "Justus Kilian Wolff", email = "hi@justuskilianwolff.com" },
    { name = "K.D. Searle" },
    { name = "H.W. Ljósheim" },
    { name = "S. Jenkins" },
]
dependencies = [
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "docplex>=2.28.240",
    "scikit-learn>=1.6.0",
    "tqdm>=4.67.1",
    "scipy>=1.14.1",
    "pip>=24.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
gui = ["plotly>=5.23.0", "streamlit>=1.37.0"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["vulture>=2.11", "ruff>=0.5.5"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ev_station_solver"]


[tool.ruff]
line-length = 130
respect-gitignore = false
src = ["src"]
extend-include = ["*.ipynb"]
exclude = [".venv"]

[tool.ruff.lint]
extend-select = ["I"] # also sort imports etc
ignore = ["E731"]     # ignore not using lambda functions

[tool.pylint]
disable = [
    "C0103", # constants not upper case
    "C0301", # line too long
    "C0114", # missing module docstring
    "W1203", # logger with f string formatting
    "R0913", # too many arguments
    "W0511", # fixme
    "W0212", # accessing protected members
    "R1720", # Unnecessary "elif" after "raise", remove the leading "el" from "elif" (has a better readibility though)
    "R0914", # too many local variables
    "R1705", # else after return (improves readibility imho)
    "R0902", # too many instance attributes
    "R0903", # too few public methods
]
ignore-paths = [".venv", "test[^_]*py"]
recursive = "y"

[tool.vulture]
exclude = [".venv"]
min_confidence = 100
paths = ["."]
